--- a/style.css
+++ b/style.css
@@ -1,46 +1,113 @@
 * {
-  margin: 0;
-  padding: 0%;
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 body {
-  height: 400px;
-  width: 400px;
-  background-color: blueviolet;
+  background-color: pink;
+  height: 100vh;
+  width: 100vw;
+  position: absolute relative;;
+}
+body>main {
   display: flex;
   flex-direction: column;
-  padding: 10vh 10vw;
-  gap: 4vh;
-  font-size: clamp(12px, 1.5vw, 15px);
+  justify-content: space-between;
+  align-items: center;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height:100%;
+  width: 100%;
+  
 }
-.container {
-  background: #ffffff;
-  width: 400%;
-  height: 500%;
-  padding: 30px;
-  margin: 50px;
-  border-radius: 25px;
+
+.counters{
+  background-color: #f5f75f;
+  display: flex;
+  gap: 1 rem;
+  margin-bottom: 25px;
+  text-align: center;
+  justify-content: center;
+  gap: 1em;
+  padding: 20px;
+  border-radius: 5px;
 }
-.cara {
-  width: 150px;
-  height: 150px;
-  margin: 20px;
+p#heads-counter, p#tails-counter{
+  background-color: #f5f75f;
+  font-size: 3em;
+  color: hsl(271, 76%, 23%);
+}
+h1 {
+  color: hsl(271, 76%, 23%);
+}
+
+section {
+  display: flex;
+  flex-direction: column;
+  width: calc(30vw + 30vh);
+  height: calc(15vw + 15vh);
+  justify-content: center;
+  align-items: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin-bottom: calc(2.5vw + 2.5vh);
+  gap: calc(1vw + 1vh);
+
+}
+
+#coin {
+  height: calc(10vw + 10vh);
+  width: calc(10vw + 10vh);
   position: relative;
+  margin: 0;
   transform-style: preserve-3d;
 }
-.cara img {
+
+#coin img {
   width: 100%;
 }
-.cruz {
-  width: 150px;
-  height: 150px;
-  margin: 20px;
+
+.tails {
+  transform: rotateX(180deg);
+  transform: rotateY(180deg);
+}
+
+.heads,
+.tails {
   position: absolute;
+  width: 100%;
+  height: 100%;
   backface-visibility: hidden;
 }
-.cruz img {
-  width: 90%;
+button{
+  padding: calc(.6vw + .6vh) calc(2vw + 2vh);
+  background-color:#f5f75f;
+  border: none;
+  box-shadow: 2px 2px 3px black;
+  color: hsl(271, 76%, 23%);
+  font-weight: bold;
+  border-radius: 5px;
+  font-size: clamp(12px, 1.5vw, 20px);
 }
-@keyframes spin-tails {
-  
+
+
+@keyframes flip-heads {
+  0% {
+      transform: rotateY(0);
+  }
+
+  100% {
+      transform: rotateY(2520deg);
+  }
+}
+
+@keyframes flip-tails {
+  0% {
+      transform: rotateY(0);
+  }
+
+  100% {
+      transform: rotateY(2340deg);
+  }
 }
